--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -34,13 +34,14 @@
     </WebView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/webView"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="2dp"
         android:baselineAlignBottom="true"
-        android:layout_alignParentEnd="true"
         android:onClick="functionClicked"
         android:src="@drawable/ic_baseline_share_24"
-        android:layout_alignBottom="@id/webView"
         app:rippleColor="@color/purple_200" />
 </RelativeLayout>
